--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,4 +8,9 @@ Description: Convinient way of caching objects in R
 License: MIT
 Encoding: UTF-8
 LazyData: true
+Depends:
+  R6
+Imports:
+  magrittr
 Suggests: testthat
+RoxygenNote: 6.0.1
