--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,8 +9,10 @@ License: MIT
 Encoding: UTF-8
 LazyData: true
 Depends:
-  R6
+  R6,
+  futile.logger
 Imports:
-  magrittr
+  magrittr,
+  digest
 Suggests: testthat
 RoxygenNote: 6.0.1
