some argument might be names and some not

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,6 @@ export("%c-%")
 export(getArgs)
 export(testFun)
 export(testFun2)
+export(testLm)
+importFrom(futile.logger,flog.debug)
 importFrom(magrittr,"%>%")
