using named LIST arguments seems to work

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,11 @@ export("%c-%")
 export(cachemer)
 export(cachemerRef)
 export(doLm)
+export(evalOutput)
 export(getArgs)
+export(getListArg)
+export(isListArg)
+export(parseList)
 export(testFun)
 export(testFun2)
 importFrom(R6,R6Class)
