--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: cachemeR
 Type: Package
 Title: Easily cache R objects
-Version: 0.2.1
+Version: 0.2.2
 Author: Kamil Foltyński <kamil.foltynski@gmail.com>
 Maintainer: Kamil Foltyński <kamil.foltynski@gmail.com>
 Description: Convinient way of caching objects in R
@@ -15,5 +15,9 @@ Imports:
   magrittr,
   digest,
   yaml
+Suggests:
+  hexSticker,
+  testthat,
+  knitr
 Suggests: testthat
 RoxygenNote: 6.0.1
