--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,44 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
-language: R
-sudo: false
+language: r
 cache: packages
+latex: false
+fortran: false
+r_build_args: '--no-build-vignettes'
+
+matrix:
+  include:
+    - os: linux
+    - os: osx
+      osx_image: xcode9.3
+      brew_packages: imagemagick
+      env: R_CODECOV=true
+    - os: osx
+      osx_image: xcode9.3
+      brew_packages: imagemagick@6 --HEAD --with-fontconfig --with-webp --with-librsvg
+    - os: osx
+      osx_image: xcode9.3
+      disable_homebrew: true
+    - os: osx
+      osx_image: xcode7.3
+      disable_homebrew: true
+    - dist: trusty
+      r_check_args: '--ignore-vignettes'
+      addons:
+        apt:
+          update: true
+          sources:
+            - sourceline: 'ppa:ubuntugis/ppa'
+          packages:
+            - libmagick++-dev
+            - librsvg2-dev
+            - libwebp-dev
+            - libpoppler-cpp-dev
+            - libtesseract-dev
+            - libleptonica-dev
+            - tesseract-ocr-eng
+            - r-cran-rgdal
+            - libfftw3-dev
 
 r_packages:
   - covr
