--- a/.travis.yml
+++ b/.travis.yml
@@ -1,35 +1,22 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
-language: r
-cache: packages
-latex: false
-fortran: false
-r_build_args: '--no-build-vignettes'
-dist: trusty
+language: c
 
-matrix:
-  include:
-    - dist: trusty
-      r_check_args: '--ignore-vignettes'
-      addons:
-        apt:
-          update: true
-          sources:
-            - sourceline: 'ppa:ubuntugis/ppa'
-          packages:
-            - libmagick++-dev
-            - librsvg2-dev
-            - libwebp-dev
-            - libpoppler-cpp-dev
-            - libtesseract-dev
-            - libleptonica-dev
-            - tesseract-ocr-eng
-            - r-cran-rgdal
-            - libfftw3-dev
-    - r: 3.4
-    - r: 3.5
-    - r: release
-    - r: devel
+before_install:
+  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
+  - chmod 755 ./travis-tool.sh
+  - ./travis-tool.sh bootstrap
+install:
+  - ./travis-tool.sh install_deps
+script: ./travis-tool.sh run_tests
+
+after_failure:
+  - ./travis-tool.sh dump_logs
+
+notifications:
+  email:
+    on_success: change
+    on_failure: change
 
 r_packages:
   - covr
