--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,17 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
-language: c
+language: r
+cache: packages
+latex: false
+r_build_args: '--no-build-vignettes'
+dist: trusty
 
-before_install:
-  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
-  - chmod 755 ./travis-tool.sh
-  - ./travis-tool.sh bootstrap
-install:
-  - ./travis-tool.sh install_deps
-script: ./travis-tool.sh run_tests
-
-after_failure:
-  - ./travis-tool.sh dump_logs
-
-notifications:
-  email:
-    on_success: change
-    on_failure: change
+matrix:
+  include:
+    - r: 3.4
+    - r: 3.5
+    - r: release
+    - r: devel
 
 r_packages:
   - covr
