--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,9 @@ jobs:
     - r: release
     - r: devel
 
-r_packages:
-  - covr
-
+env:
+  global:
+  - _R_CHECK_FORCE_SUGGESTS_=false
+  
 after_success:
-  - Rscript -e 'library(covr); codecov()'
+  - Rscript -e 'covr::codecov()'
