--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,5 +14,9 @@ export(testFun2)
 importFrom(R6,R6Class)
 importFrom(futile.logger,flog.debug)
 importFrom(magrittr,"%>%")
+importFrom(methods,functionBody)
+importFrom(stats,lm)
+importFrom(stats,rnorm)
+importFrom(stats,runif)
 importFrom(yaml,read_yaml)
 importFrom(yaml,write_yaml)
