--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,9 @@ jobs:
 env:
   global:
   - _R_CHECK_FORCE_SUGGESTS_=false
-  
+
+r_packages:
+  - covr
+
 after_success:
-  - Rscript -e 'covr::codecov()'
+  - Rscript -e 'Sys.setenv(TRAVIS = TRUE); covr::codecov()'
