--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,10 @@ r_packages:
   - covr
 
 after_success:
-  - Rscript -e 'Sys.setenv(TRAVIS = TRUE); covr::codecov()'
+  - Rscript -e 'covr::codecov()'
+  - Rscript -e 'covr::coveralls()'
+  
+notifications:
+  email:
+    on_success: never
+    on_failure: always
