--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,8 @@ r_packages:
   - covr
 
 after_success:
-  - Rscript -e 'covr::codecov()'
-  - Rscript -e 'covr::coveralls()'
+  - Rscript -e 'Sys.setenv(TRAVIS = TRUE); covr::codecov()'
+  - Rscript -e 'Sys.setenv(TRAVIS = TRUE); covr::coveralls()'
   
 notifications:
   on_success: never
