--- a/.travis.yml
+++ b/.travis.yml
@@ -25,5 +25,6 @@ after_success:
   - Rscript -e 'Sys.setenv(TRAVIS = TRUE); covr::coveralls()'
   
 notifications:
-  on_success: never
-  on_failure: always
+  email:
+    on_success: never
+    on_failure: always
