borrowed function from magrittr

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(evalOutput)
 export(getArgs)
 export(getListArg)
 export(isListArg)
+export(is_parenthesized)
 export(parseList)
 export(testFun)
 export(testFun2)
@@ -18,5 +19,6 @@ importFrom(methods,functionBody)
 importFrom(stats,lm)
 importFrom(stats,rnorm)
 importFrom(stats,runif)
+importFrom(utils,getFromNamespace)
 importFrom(yaml,read_yaml)
 importFrom(yaml,write_yaml)
