--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ export(testFun)
 export(testFun2)
 importFrom(R6,R6Class)
 importFrom(futile.logger,flog.debug)
+importFrom(futile.logger,flog.info)
+importFrom(futile.logger,flog.threshold)
 importFrom(magrittr,"%>%")
 importFrom(methods,functionBody)
 importFrom(stats,lm)
