new method + tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,9 @@ export(parseList)
 export(testFun)
 export(testFun2)
 importFrom(R6,R6Class)
+importFrom(data.table,":=")
+importFrom(data.table,data.table)
+importFrom(data.table,rbindlist)
 importFrom(futile.logger,flog.debug)
 importFrom(futile.logger,flog.info)
 importFrom(futile.logger,flog.threshold)
@@ -20,5 +23,6 @@ importFrom(methods,functionBody)
 importFrom(stats,lm)
 importFrom(stats,rnorm)
 importFrom(stats,runif)
+importFrom(tibble,as_tibble)
 importFrom(yaml,read_yaml)
 importFrom(yaml,write_yaml)
