--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(getArgs)
 export(getListArg)
 export(isListArg)
 export(parseList)
+export(saveCache)
 export(testFun)
 export(testFun2)
 importFrom(R6,R6Class)
@@ -18,6 +19,11 @@ importFrom(data.table,rbindlist)
 importFrom(futile.logger,flog.debug)
 importFrom(futile.logger,flog.info)
 importFrom(futile.logger,flog.threshold)
+importFrom(future,"%<-%")
+importFrom(future,futureOf)
+importFrom(future,plan)
+importFrom(future,resolve)
+importFrom(future,resolved)
 importFrom(magrittr,"%>%")
 importFrom(methods,functionBody)
 importFrom(stats,lm)
