--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ importFrom(futile.logger,flog.debug)
 importFrom(futile.logger,flog.info)
 importFrom(futile.logger,flog.threshold)
 importFrom(future,"%<-%")
+importFrom(future,availableCores)
 importFrom(future,futureOf)
 importFrom(future,plan)
 importFrom(future,resolve)
