--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(getArgs)
 export(getListArg)
 export(isListArg)
 export(parseList)
+export(restoreCache)
 export(saveCache)
 export(testFun)
 export(testFun2)
@@ -25,6 +26,7 @@ importFrom(future,futureOf)
 importFrom(future,plan)
 importFrom(future,resolve)
 importFrom(future,resolved)
+importFrom(future.apply,future_lapply)
 importFrom(magrittr,"%>%")
 importFrom(methods,functionBody)
 importFrom(stats,lm)
