--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(doLm)
 export(evalOutput)
 export(getArgs)
 export(getListArg)
+export(getPattern)
 export(isListArg)
 export(parseList)
 export(restoreCache)
