--- a/Dockerfile-R3.6.1
+++ b/Dockerfile-R3.6.1
@@ -1,9 +1,13 @@
 FROM rocker/rstudio:3.6.1
 
-RUN sudo apt-get update && apt-get install -y libxml2 pandoc libcairo2-dev libxml2-dev
+RUN sudo apt-get update && apt-get install -y libxml2 pandoc libcairo2-dev libxml2-dev libmagick++-dev
 
 ARG RPKG=/tmp/pkg
+
 ADD . ${RPKG}
-RUN R -e "install.packages('devtools')" \
-    && R -e "devtools::install_dev_deps('${RPKG}')" \
-    && R CMD INSTALL ${RPKG}
+
+RUN R -e "install.packages('devtools')" 
+
+RUN R -e "devtools::install_dev_deps('${RPKG}')" \
+    && R CMD INSTALL ${RPKG} \
+    && rm -rf /tmp/*
