--- a/.travis.yml
+++ b/.travis.yml
@@ -1,35 +1,19 @@
-# R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
-
 language: r
-cache: packages
-latex: false
-r_build_args: '--no-build-vignettes'
-dist: trusty
 
-warnings_are_errors: false
-
-before_install:
-  - sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E084DAB9
-
-jobs:
-  include:
-    - r: 3.4
-    - r: 3.5
-    - r: release
-    - r: devel
+services:
+  - docker
 
 env:
   global:
-  - _R_CHECK_FORCE_SUGGESTS_=false
+    - CACHE_IMG=kfoltynski/cachemer:3.6.1
+    - TEST_IMG=cachemer:3.6.1
+    - DOCKERFILE=Dockerfile-R3.6.1
 
-r_packages:
-  - covr
+before_install:
+- docker pull ${CACHE_IMG}
+- docker build --cache-from ${CACHE_IMG} -t ${TEST_IMG} -f ${DOCKERFILE} .
+- docker run -d -e PASSWORD=test -v $(PWD):/mnt/vol -w /mnt/vol ${TEST_IMG} /bin/sh -c "R CMD check ."
+- docker ps -a
 
-after_success:
-  - Rscript -e 'Sys.setenv(TRAVIS = TRUE); covr::codecov()'
-  - Rscript -e 'Sys.setenv(TRAVIS = TRUE); covr::coveralls()'
-  
-notifications:
-  email:
-    on_success: never
-    on_failure: always
+script:
+- R CMD check .
