--- a/Dockerfile-R3.6.1
+++ b/Dockerfile-R3.6.1
@@ -4,7 +4,7 @@ RUN sudo apt-get update && apt-get install -y libxml2 pandoc libcairo2-dev libxm
 
 # speedup build by installing dependencies first (they do not change as often as R pkg)
 ARG DESC=/tmp/DESCRIPTION
-ADD DESCRIPTION ${DESC}
+ADD src/DESCRIPTION ${DESC}
 RUN R -e "install.packages('desc'); install.packages(desc::desc_get_deps('${DESC}')[['package']])"
 
 ARG RPKG=/tmp/pkg
